@@ -147,6 +147,11 @@ final class EmbeddedPigStats extends PigStats {
     }
 
     @Override
+    public String getDisplayString() {
+        return null;
+    }
+
+    @Override
     public long getProactiveSpillCountObjects() {
         throw new UnsupportedOperationException();
     }
